src/objects/PaymentGateway__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Payment Gateway</description>
    <fields>
        <fullName>Access_Code__c</fullName>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MerchantURL__c</fullName>
        <label>MerchantURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Name__c</fullName>
        <description>Merchant Name</description>
        <inlineHelpText>Merchant Name</inlineHelpText>
        <label>Merchant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_ID__c</fullName>
        <description>Operation ID</description>
        <inlineHelpText>Operation ID</inlineHelpText>
        <label>Operation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Gateway</label>
</CustomObject>